--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   padding: 0px;
   position: absolute;
   z-index: 1;
+  overflow-x: hidden; 
 }
 
 html {
@@ -13,45 +14,31 @@ html {
 .rect {
   position: absolute;
   z-index: 3;
+  text-align: center;
+  color: #fc6d26;
+  width:500px;
+  height:500px;
+  border: solid #fca326 1px;
+  transform: rotate(-10deg);
+  animation: moving 47s infinite linear;
+}
+
+.r1 {
   margin: -10vh 0 0 10%;
-  text-align: center;
-  color: #fc6d26;
-  width:500px;
-  height:500px;
-  border: solid #fff 1px;
-  transform: rotate(-10deg);
-  animation: moving 47s infinite linear;
 }
 
-.rect1 {
-  position: absolute;
-  z-index: 3;
+.r2 {
   margin: -10vh 0 0 30%;
-  text-align: center;
-  color: #fc6d26;
-  width:500px;
-  height:500px;
-  border: solid #fff 1px;
-  transform: rotate(-10deg);
-  animation: moving 47s infinite linear;
 }
 
-.rect2 {
-  position: absolute;
-  z-index: 3;
+.r3 {
   margin: -10vh 0 0 50%;
-  text-align: center;
-  color: #fc6d26;
-  width:500px;
-  height:500px;
-  border: solid #fff 1px;
-  transform: rotate(-10deg);
-  animation: moving 47s infinite linear;
 }
 
 #present, #past, #future {
   background-color: #554478;
   min-height: 100vh;
+  width: 100vw;
   text-align: center;
   padding-top: 25vh;
   right: 0;
@@ -61,21 +48,17 @@ html {
   z-index: -1;
 }
 
-
 p {
   margin: 0px;
   position: relative;
   z-index: 21;
 }
 
-.wrapped_past {
-  background-color: blue;
-  right: 0;
-  left: 0;
+.wrapped {
   margin: 0 10%;
   padding: 0px 0px;
   position: relative;
-  z-index: 220;
+  z-index: 201;
 }
 
 .link_frame {
@@ -98,8 +81,9 @@ a {
   background-color: #fc6d26;
   cursor: pointer;
   padding: 18px;
-  width: 80%;
+  width: 100%;
   border: none;
+  border-radius: 1px;
   text-align: left;
   outline: none;
   font-size: 16px;
@@ -110,7 +94,7 @@ a {
 }
 
 .panel {
-  margin: 0 10%;
+  margin: 0 0;
   background-color: #fca326;
   max-height: 0;
   text-align: center;
